# rive-openvg-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_baseline.sh  setup_baseline_existing.sh  setup_baseline_simple.sh
benchmarks/: CMakeLists.txt  console_benchmark.cpp  simple_animation.riv  visual_benchmark.cpp
cmake/toolchains/: imx93.cmake
